 Otherwise indicated differently, all changes made by 
 	Jelmer Vernooij <jelmer@vernstok.nl>

Ctrlproxy 2.7:
 * Support non-blocking connects (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add 'JUMP' command (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Unset autojoin on KICK (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Add ability to change NICK when away
 * Make repl_* work when NICK sent by client differs from current NICK
 * Build with -Wall
 * Add dircproxyrc-to-ctrlproxyrc script
 * Add TOS support (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Support mIRC and ksirc
 * Don't crash on non-existing <networks> or <plugins>
 * Add 'debug' module for easier debugging
 * Make sure modules are never loaded twice (Daniel Poelzleithner
											 <ctrlproxy@poelzi.org>)
 * Support binding on a specific IP in socket module (Daniel Poelzleithner
													  <ctrlproxy@poelzi.org>)
 * Add support for unloading crashing modules
 * Use correct string comparison when necessary
 * Support 'true' RFC1459 string comparison
 * Respect CASEMAPPING sent by server
 * Use NETWORK sent by server
 * Add autosave module (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Use PREFIX sent by server
 * Add get_prefix_by_mode()
 * Use CHANTYPES sent by server
 * Add way to get network features
 * Keep track of channels nick is on in network_nick structure
 * New, more advanced filter system supporting classes and priorities
 * Add help support in admin module
 	(Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Make name and hostmask attribute of nick on network shared 
 	(Daniel Poelzleithner <ctrlproxy@poelzi.org>)
 * Do the actual NICK after GHOST'ing another nick
 * Fix bug with setting PRIVATE too often
 * Fix issue with NickServ IDENTIFY'ing when connecting to server
 * Support multiple processes
 * Add cisg utility
 * Update items kept track of by stats by default
 * Put some modules in their own directory
 * Add report_time
 * Add linestack_file