@@ -2,6 +2,8 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Introduce functions to use filter classes
+ * Support different NICK sent by client in replication
  * Support non-blocking connects (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
  * Add 'JUMP' command (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
  * Unset autojoin on KICK (Daniel Poelzleithner <ctrlproxy@poelzi.org>)
